--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,3 +15,13 @@ services:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - web
