--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ numpy>=1.26.0,<2.0
 transformers==4.39.3
 git+https://github.com/facebookresearch/audiocraft#egg=audiocraft
 google-generativeai
+google-cloud-storage
