déploiement https fonctionnel

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,15 +1,18 @@
 server {
     listen 80;
-    server_name _;
+    server_name promptune.online www.promptune.online;
 
     # Fichiers statiques collectés via collectstatic
     location /static/ {
-        alias /home/jupyter/music_generator/staticfiles/;
+        alias /home/bloch_alexaaa/music_generator/staticfiles/;
+        access_log off;
+        expires 1M;
+        add_header Cache-Control "public";
     }
 
     # Fichiers médias (ex: musiques générées)
     location /media/ {
-        alias /home/jupyter/music_generator/media/;
+        alias /home/bloch_alexaaa/music_generator/media/;
     }
 
     # Reverse proxy vers Gunicorn
