--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install libfluidsynth system library
         run: |
           sudo apt-get update
-          sudo apt-get install -y libfluidsynth2
+          sudo apt-get install -y fluidsynth
 
       - name: Install dependencies
         run: |
