--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,18 @@
-name: Deploy Django App
+name: Test SSH Access
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  ssh-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install libfluidsynth system library
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y fluidsynth
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Collect static files
-        run: |
-          python manage.py collectstatic --noinput
-
-      # - name: Run tests (optionnel)
-      #   run: |
-      #     python manage.py test
-
-      - name: Deploy via SSH
+      - name: Attempt SSH connection
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_KEY }}
           script: |
-            cd ~/music_generator
-            git pull origin main
-            source /opt/conda/etc/profile.d/conda.sh
-            conda activate monenv310
-            python manage.py collectstatic --noinput
-            sudo systemctl restart gunicorn
-            sudo systemctl restart nginx
+            echo "✅ SSH connection successful!"
